--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,8 @@ disqusShortname: ''
 params:
   banner:
     buttonText: Get Started
-    subtitle: Hello, my name is Pietro Pollarini and I am a Masters in Analytics student at London Business School
-    title: Pietro Pollarini - Data Science Portfolio
+    subtitle: My Data Science Portfolio
+    title: Hello, my name is Pietro Pollarini and I am a Masters in Analytics student at London Business School
   blog: {}
   contact: 
     address:
